# django-rental-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env_example  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
analytics/: admin.py  serializers.py  tasks.py  urls.py  views.py
analytics/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
analytics/models/: __init__.py  property_view.py  search_history.py
analytics/tests/: test_popular_searches.py
bookings/: admin.py  apps.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_booking_price_frozen.py  0005_booking_booking_status_valid.py  0006_booking_overlap_triggers.py
bookings/models/: __init__.py  booking.py  status.py
bookings/services/: email.py
bookings/tests/: test_booking_overlap_trigger.py  test_payment_stub.py  test_permission_boundaries.py
common/: exceptions.py  mixins.py  utils.py  validators.py  views.py
common/models/: __init__.py  base.py  choices.py
config/: celery.py  settings.py  urls.py
listings/: admin.py  apps.py  filters.py  permissions.py  serializers.py  signals.py  urls.py  views.py
notifications/: admin.py  serializers.py  urls.py  views.py
reviews/: admin.py  apps.py  serializers.py
support/: admin.py  apps.py  permissions.py  serializers.py  urls.py  views.py
users/: admin.py  apps.py  permissions.py  profile_urls.py  serializers.py  tokens.py  urls.py  views.py
(+71 files in other folders)
