[project]
name = "django-rental-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.40",
    "django>=6.0.6",
    "django-environ>=0.14.0",
    "django-redis>=7.0.0",
    "env>=0.1.0",
    "faker>=40.28.1",
    "mysqlclient>=2.2.8",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
]
